infrastructure/base/network-policies/postgres-arasaka-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-arasaka-policy
  namespace: database-arasaka
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:            # Allow pgadmin4 to access
          matchLabels:
            app: pgadmin4
      - podSelector:
          matchLabels:
            app: pgadmin4
            db-access: arasaka  # Pods must have this label
      ports:
        - protocol: TCP
          port: 5432
